[Problem5] feat: 주어진 화폐 단위 중 큰 금액의 화폐 우선으로 받도록 각 갯수를 구해 반환하도록 구현했습니다.